--- a/app/src/main/res/layout/activity_level_selection.xml
+++ b/app/src/main/res/layout/activity_level_selection.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="650dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="Character"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +33,7 @@
         android:layout_marginBottom="250dp"
         android:adjustViewBounds="true"
         android:background="@null"
+        android:contentDescription="World 1 Level 1"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +49,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="250dp"
         android:background="@null"
+        android:contentDescription="World 1 Level 2"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w1_l1"
@@ -61,6 +64,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="250dp"
         android:background="@null"
+        android:contentDescription="World 1 Level 3"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w1_l2"
@@ -77,6 +81,7 @@
         android:layout_marginBottom="8dp"
         android:adjustViewBounds="true"
         android:background="@null"
+        android:contentDescription="World 2 Level 1"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +97,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@null"
+        android:contentDescription="World 2 Level 2"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l2"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l1"
@@ -106,6 +112,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@null"
+        android:contentDescription="World 2 Level 3"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/imageButton_w3_l3"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w2_l2"
@@ -122,6 +129,7 @@
         android:layout_marginBottom="8dp"
         android:adjustViewBounds="true"
         android:background="@null"
+        android:contentDescription="World 3 Level 1"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,6 +145,7 @@
         android:layout_marginTop="250dp"
         android:layout_marginBottom="8dp"
         android:background="@null"
+        android:contentDescription="World 3 Level 2"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w3_l1"
@@ -151,6 +160,7 @@
         android:layout_marginTop="250dp"
         android:layout_marginBottom="8dp"
         android:background="@null"
+        android:contentDescription="World 3 Level 3"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_w3_l2"
