--- a/app/src/main/res/layout/activity_level_selection_world_one.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_one.xml
@@ -6,7 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cloud"
-    tools:context=".LevelSelection">
+    tools:context=".LevelSelectionWorldOne">
+
+    <Button
+        android:id="@+id/button_world_one_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/ic_chevron_right_black_20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView_character"
