--- a/app/src/main/res/layout/activity_multiple_choice_game.xml
+++ b/app/src/main/res/layout/activity_multiple_choice_game.xml
@@ -5,8 +5,37 @@
     android:id="@+id/constraintLayout_MCQ"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper1"
+    android:background="#53a4f5"
     tools:context=".MultipleChoiceGame">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/background_0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds0"/>
+
+        <ImageView
+            android:id="@+id/background_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds1"/>
+
+        <ImageView
+            android:id="@+id/background_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds2"/>
+
+        <ImageView
+            android:id="@+id/background_3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds3"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textView_MCQ"
