--- a/app/src/main/res/layout/activity_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_onboarding_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
+    android:background="@drawable/clouds1"
     tools:context=".OnboardingScreen">
 
     <android.support.v4.view.ViewPager
