--- a/app/src/main/res/layout/activity_trivia_answer.xml
+++ b/app/src/main/res/layout/activity_trivia_answer.xml
@@ -4,7 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#53a4f5"
     tools:context=".TriviaAnswerActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/background_0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds0"/>
+
+        <ImageView
+            android:id="@+id/background_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds1"/>
+
+        <ImageView
+            android:id="@+id/background_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds2"/>
+
+        <ImageView
+            android:id="@+id/background_3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clouds3"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/question_info"
@@ -36,7 +66,7 @@
         android:id="@+id/next_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:background="#ffffff"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -52,6 +82,7 @@
         android:id="@+id/prev_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#ffffff"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -66,6 +97,7 @@
         android:id="@+id/main_menu_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#ffffff"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
